--- a/diensten/index.html
+++ b/diensten/index.html
@@ -3,54 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Diensten voor KMO’s: Marketing & Consultancy | Buscemi Group</title>
   <meta name="description" content="Ontdek onze diensten voor KMO’s: marketing die resultaat oplevert en consultancy die kosten verlaagt en processen optimaliseert." />
   <link rel="canonical" href="https://buscemigroup.be/diensten/" />
-  <meta name="theme-color" content="#0d1425" />
-
-  <!-- Fonts -->
+  <meta name="theme-color" content="#0a3d2c" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-
-  <!-- Icons & PWA -->
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-
-  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/diensten/" />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Diensten voor KMO’s | Buscemi Group" />
   <meta property="og:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
-    .faq-grid { display: grid; gap: 1.5rem; }
-    @media (min-width: 768px) { .faq-grid { grid-template-columns: 1fr 1fr; } }
-    .faq-card { padding: 1.5rem; }
-    .faq-card h3 { margin-bottom: 0.5rem; font-size: 1.1rem; }
-  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
-
   <header class="site-header">
     <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
-        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
-      </button>
-      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -67,6 +43,7 @@
         </ul>
       </nav>
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
@@ -75,87 +52,83 @@
       <div class="container">
         <p class="kicker">Onze Diensten</p>
         <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
-        <p class="sub mx-auto">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw doelen.</p>
+        <p class="sub">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw doelen.</p>
       </div>
     </section>
 
-    <section class="services-section fade-in-section">
+    <section class="services-section section">
       <div class="container">
         <div class="services-grid">
-          <a href="/diensten/marketing.html" class="card service-card">
-            <div class="service-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg>
-            </div>
+          <a href="/diensten/marketing.html" class="card">
+            <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg></div>
             <h3>Marketing</h3>
             <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
-            <span class="card-link">Ontdek Marketing</span>
+            <span class="card-link">Ontdek Marketing <span class="arrow">→</span></span>
           </a>
-          <a href="/diensten/consultancy.html" class="card service-card">
-            <div class="service-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg>
-            </div>
+          <a href="/diensten/consultancy.html" class="card">
+            <div class="service-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg></div>
             <h3>Consultancy</h3>
             <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat u meteen kan uitvoeren.</p>
-            <span class="card-link">Ontdek Consultancy</span>
+            <span class="card-link">Ontdek Consultancy <span class="arrow">→</span></span>
           </a>
         </div>
       </div>
     </section>
 
-    <section class="process-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">Onze Werkwijze</p>
-                <h2>Een heldere aanpak in 3 stappen</h2>
-            </div>
-            <div class="process-grid">
-                <div class="card process-card">
-                    <div class="process-number">01</div>
-                    <h3>Analyse</h3>
-                    <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
-                </div>
-                <div class="card process-card">
-                    <div class="process-number">02</div>
-                    <h3>Plan</h3>
-                    <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
-                </div>
-                <div class="card process-card">
-                    <div class="process-number">03</div>
-                    <h3>Uitvoering</h3>
-                    <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
-                </div>
-            </div>
+    <section class="process-section section surface">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">Onze Werkwijze</p>
+          <h2>Een heldere aanpak in 3 stappen</h2>
         </div>
-    </section>
-    
-    <section class="faq-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">FAQ</p>
-                <h2>Veelgestelde vragen</h2>
-            </div>
-            <div class="faq-grid">
-                <div class="card faq-card">
-                    <h3>Kunnen we klein starten?</h3>
-                    <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Wanneer zie ik resultaat?</h3>
-                    <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van uw startpositie.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Werken jullie met lange contracten?</h3>
-                    <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel en transparant.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Hoe verloopt de rapportering?</h3>
-                    <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat u gericht kan bijsturen.</p>
-                </div>
-            </div>
+        <div class="process-grid">
+          <div class="card">
+            <div class="process-number">01</div>
+            <h3>Analyse</h3>
+            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+          </div>
+          <div class="card">
+            <div class="process-number">02</div>
+            <h3>Plan</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+          </div>
+          <div class="card">
+            <div class="process-number">03</div>
+            <h3>Uitvoering</h3>
+            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+          </div>
         </div>
+      </div>
     </section>
 
-    <section class="cta-section fade-in-section">
+    <section class="faq-section section">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">FAQ</p>
+          <h2>Veelgestelde vragen</h2>
+        </div>
+        <div class="faq-grid">
+          <div class="card">
+            <h3>Kunnen we klein starten?</h3>
+            <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
+          </div>
+          <div class="card">
+            <h3>Wanneer zie ik resultaat?</h3>
+            <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van uw startpositie.</p>
+          </div>
+          <div class="card">
+            <h3>Werken jullie met lange contracten?</h3>
+            <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel en transparant.</p>
+          </div>
+          <div class="card">
+            <h3>Hoe verloopt de rapportering?</h3>
+            <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat u gericht kan bijsturen.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Wilt u weten wat voor uw KMO het meeste oplevert?</h2>
@@ -166,23 +139,23 @@
     </section>
   </main>
 
- <footer class="site-footer">
-      <div class="container footer-container">
-        <div class="footer-brand">
-          <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
-          <p>Marketing & Consultancy voor KMO's.</p>
-        </div>
-        <div class="footer-links">
-          <a href="/legal.html">Privacy</a>
-          <a href="/legal.html#cookies">Cookies</a>
-          <a href="/legal.html#voorwaarden">Voorwaarden</a>
-        </div>
-        <div class="footer-info">
-          <p>&copy; <span id="year"></span> Buscemi Group</p>
-          <p>BE 1027.136.562</p>
-        </div>
+  <footer class="site-footer">
+    <div class="container footer-container">
+      <div class="footer-brand">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+        <p>Marketing & Consultancy voor KMO's.</p>
       </div>
-    </footer>
+      <div class="footer-links">
+        <a href="/legal.html">Privacy</a>
+        <a href="/legal.html#cookies">Cookies</a>
+        <a href="/legal.html#voorwaarden">Voorwaarden</a>
+      </div>
+      <div class="footer-info">
+        <p>&copy; <span id="year"></span> Buscemi Group</p>
+        <p>BE 1027.136.562</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
@@ -191,18 +164,7 @@
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-      const sections = document.querySelectorAll('.fade-in-section');
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('is-visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.1 });
-      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
